# ARIA-TRL

./: .gitignore  README.md  pyproject.toml  setup.py
aria_trl/: __init__.py  baselines.py  config.py  consolidation.py  modules.py  trainer.py  utils.py
examples/: __init__.py  compare_continual_learning.py  distilgpt2_example.py  kaggle_benchmark.py
paper/: ARIA_TRL_paper.tex
results/: kaggle_benchmark_results.json
